# cncpptpl

./: .gitignore  CMakeLists.txt  makefile  readme.md
doc/: build.md  building.md  next-steps.md  readme.md
include/: readme.md  testFuncs.h
lib/: readme.md
src/: main.cpp  readme.md  testFuncs.cpp
test/: readme.md
